--- a/main.html
+++ b/main.html
@@ -7,7 +7,41 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+    <header>
+        <h1>The Movie Title</h1>
+    </header>
+
+    <nav>
+        <a href="#nav-actor">Actors</a>
+        <a href="#nav-quote">Quotes</a>
+    </nav>
+
+    <section id="summary">
+        <h2>Summary</h2>
+        <p>Brief summary of the plot goes here...</p>
+    </section>
+
+    <section id="actor">
+        <h2>Actors</h2>
+        <p>Details about the actors go here...</p>
+    </section>
+
+    <section id="quote">
+        <h2>Quotes</h2>
+        <p>Your favorite quote from the movie goes here...</p>
+    </section>
+
+    <aside>
+        <h2>Additional Information</h2>
+        <p>IMDb Rating: 9.0/10</p>
+        <p>Release Date: January 1, 2023</p>
+    </aside>
+
+    <footer>
+        Produced by: Producer's Name
+    </footer>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
