--- a/main.html
+++ b/main.html
@@ -12,15 +12,17 @@
         <h1>The Movie Title</h1>
     </header>
 
-    <nav>
-        <a href="#nav-actor">Actors</a>
-        <a href="#nav-quote">Quotes</a>
+    <nav id="nav-actor">
+        <a href="#">Actors</a>
+	</nav>
+		<nav id="nav-quote">
+        <a href="#">Quotes</a>
     </nav>
 
-    <section id="summary">
+    <summary id="summary">
         <h2>Summary</h2>
         <p>Brief summary of the plot goes here...</p>
-    </section>
+    </summary>
 
     <section id="actor">
         <h2>Actors</h2>
