--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
     </header>
 
     <nav id="nav-actor">
-        <a href="#">Actors</a>
+        <a href="#nav-actor">Actors</a>
 	</nav>
 		<nav id="nav-quote">
-        <a href="#">Quotes</a>
+        <a href="#nav-quote">Quotes</a>
     </nav>
 
     <summary id="summary">
