--- a/main.html
+++ b/main.html
@@ -12,12 +12,9 @@
         <h1>The Movie Title</h1>
     </header>
 
-    <nav id="nav-actor">
-        <a href="#actor">Actors</a>
+    <nav >
+       <span id="nav-actor"><a href="#actor">Actors</a></span> <span id="nav-quote"> <a href="#quote">Quotes</a></span>
 	</nav>
-		<nav id="nav-quote">
-        <a href="#quote">Quotes</a>
-    </nav>
 
     <summary id="summary">
         <h2>Summary</h2>
